Arreglo en los alts de la pagina

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -49,21 +49,20 @@
             <h3 class="tituloinicial">ACCIÓN:</h3>
             <ul type="none" class="primerasection">
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png" alt=""> </a>
+                    <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png" alt="Foto de Batman: The Dark Knight"> </a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
                     </p>
                 </li>
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="">
+                    <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="Foto de Deadpol">
                     </a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">DeadPool</a>
                     </p>
                 </li>
                 <li>
-                    <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg"
-                            alt=""></a>
+                    <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="">Foto de Iron Man</a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
                     </p>
@@ -74,19 +73,19 @@
             <h3 class="tituloinicial">CIENCIA FICCIÓN:</h3>
             <ul type="none" class="primerasection">
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/suicideSquad.jpg" alt=""> </a>
+                    <a href="./detail-movie.html"> <img class="imagen" src="./img/suicideSquad.jpg" alt="Foto de The Suicide Squad"> </a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
                     </p>
                 </li>
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt=""> </a>
+                    <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="Foto de Venom"> </a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Venom</a>
                     </p>
                 </li>
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/justiceLeague.png" alt=""> </a>
+                    <a href="./detail-movie.html"> <img class="imagen" src="./img/justiceLeague.png" alt="Foto de Justice League"> </a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Justice League</a>
                     </p>
@@ -97,19 +96,19 @@
             <h3 class="tituloinicial">FAMILIA:</h3>
             <ul type="none" class="primerasection">
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/avengersEndgame.jpg" alt=""> </a>
+                    <a href="./detail-movie.html"> <img class="imagen" src="./img/avengersEndgame.jpg" alt="Foto de Avengers:EndGame"> </a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
                     </p>
                 </li>
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img/spiderman.png" alt=""> </a>
+                    <a href="./detail-movie.html"> <img class="imagen" src="./img/spiderman.png" alt="Foto de Spiderman: Far From Home"> </a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
                     </p>
                 </li>
                 <li>
-                    <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="">
+                    <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="Foto de Avengers: IninityWar">
                     </a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-movie.html">Avengers: IninityWar</a>
@@ -122,21 +121,20 @@
             <h3 class="tituloinicial">ACCIÓN:</h3>
             <ul type="none" class="primerasection">
                 <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg" alt="">
+                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg" alt="Foto de Daredevil">
                         <p class="tituoloprincipaldepelicula">
                             <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
                         </p>
                 </li>
                 <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt="">
+                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt="Foto de Watchmen">
                     </a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href="./detail-series.html">Watchmen</a>
                     </p>
                 </li>
                 <li>
-                    <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series/gotham.jpg"
-                            alt=""></a>
+                    <a href="./img-series-nuevo/ironMan.jpg"> <img class="imagen" src="./img-series/gotham.jpg" alt="Foto de Gotham"></a>
                     <p class="tituoloprincipaldepelicula">
                         <a class="titulopelicula" href=".">Gotham</a>
                     </p>
@@ -147,7 +145,7 @@
             <h3 class="tituloinicial">CIENCIA FICCION:</h3>
             <ul type="none" class="primerasection">
                 <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt="">
+                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt="Foto de Titans">
                         <p class="tituoloprincipaldepelicula">
                             <a class="titulopelicula" href="./detail-series.html">Titans</a>
                         </p>
@@ -158,7 +156,7 @@
             <h3 class="tituloinicial">FAMILIA:</h3>
             <ul type="none" class="primerasection">
                 <li>
-                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt="">
+                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt="Foto de Loki">
                         <p class="tituoloprincipaldepelicula">
                             <a class="titulopelicula" href="./detail-series.html">Loki</a>
                         </p>
