--- a/detail-series.html
+++ b/detail-series.html
@@ -50,7 +50,7 @@
             <article class="serieprincipal">
                 <h3 class="titulosdetalles">Titans</h3>
                 <h4 class="duracion">Temporada: 3</h4>
-                <img class="imagen" src="./img-series/titans.jpg" alt="">
+                <img class="imagen" src="./img-series/titans.jpg" alt="Foto de Titans">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -80,7 +80,7 @@
             <article class="serieprincipal">
                 <h3 class="titulosdetalles">Daredevil</h3>
                 <h4 class="duracion">Temporadas: 3</h4>
-                <img class="imagen" src="./img-series/daredevil.jpg" alt="">
+                <img class="imagen" src="./img-series/daredevil.jpg" alt="Foto de Daredevil">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -109,7 +109,7 @@
             <article class="serieprincipal">
                 <h3 class="titulosdetalles">Watchmen</h3>
                 <h4 class="duracion">Temporadas: 1</h4>
-                <img class="imagen" src="./img-series/Watchmen.png" alt="">
+                <img class="imagen" src="./img-series/Watchmen.png" alt="Foto de Watchmen">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -137,7 +137,7 @@
             <article class="serieprincipal">
                 <h3 class="titulosdetalles">Gotham</h3>
                 <h4 class="duracion">Temporadas: 5</h4>
-                <img class="imagen" src="./img-series/gotham.jpg" alt="">
+                <img class="imagen" src="./img-series/gotham.jpg" alt="Foto de Gotham">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -164,7 +164,7 @@
             <article class="serieprincipal">
                 <h3 class="titulosdetalles">Loki</h3>
                 <h4 class="duracion">Temporadas: 1</h4>
-                <img class="imagen" src="./img-series/loki.jpg" alt="">
+                <img class="imagen" src="./img-series/loki.jpg" alt="Foto de Loki">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
