--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <section class="primerasection">
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg" alt=" Foto de Avengers:EndGame"> </a>
 
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
@@ -58,28 +58,28 @@
                 <p class="titulopelicula">Estreno: 22/4/19 </p>
             </article>
             <article class="imagenpp">
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png" alt=" Foto de Batman: The Dark Knight"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 17/7/2008 </p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=" Foto de The Suicide Squad"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 5/08/2021 </p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=" Foto de Spiderman: Far From Home"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 2/6/2019 </p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="">
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="Venom">
                 </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Venom</a>
@@ -92,35 +92,35 @@
         </div>
         <section class="primerasection">
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt="Foto de Titans"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Titans</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 12/10/2018 </p>
             </article>
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg" alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg" alt="Foto de Daredevil"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 10/04/15 </p>
             </article>
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt="Foto de Watchmen"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Watchmen</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 20/10/2019 </p>
             </article>
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/gotham.jpg" alt=""></a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/gotham.jpg" alt="Foto de Gotham"></a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Gotham</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 22/9/2014 </p>
             </article>
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt="Foto de Loki"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Loki</a>
                 </h3>
@@ -132,35 +132,35 @@
         </div>
         <section class="primerasection">
             <article>
-                <a href=""> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt=""> </a>
+                <a href=""> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="Foto de Avengers: IninityWar"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers: IninityWar</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 22/4/2019 </p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="Foto de DeadPool"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">DeadPool</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 11/2/2016 </p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="Foto de Iron Man"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 30/04/2008 </p>
             </article>
             <article>
-                <a href=""> <img class="imagen" src="./img/justiceLeague.png" alt=""> </a>
+                <a href=""> <img class="imagen" src="./img/justiceLeague.png" alt="Foto de Justice League"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Justice League</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 16/11/2017 </p>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt="Foto de Spiderman 2"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Spiderman 2</a>
                 </h3>
