--- a/detail-movie.html
+++ b/detail-movie.html
@@ -54,7 +54,7 @@
 
                 <h3 class="titulosdetalles">Avengers:EndGame</h3>
                 <h4 class="duracion">Duración (3h 2m)</h4>
-                <img class="imagen" src="./img/avengersEndgame.jpg" alt="">
+                <img class="imagen" src="./img/avengersEndgame.jpg" alt="Avengers:EndGame">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -90,7 +90,7 @@
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">Batman:The Dark Knight</h3>
                 <h4 class="duracion">Duración (2h 32m)</h4>
-                <img class="imagen" src="./img/batmanCabalero.png" alt="">
+                <img class="imagen" src="./img/batmanCabalero.png" alt="Batman:The Dark Knight">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -120,7 +120,7 @@
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">The Suicide Squad</h3>
                 <h4 class="duracion">Duración (2h 12m)</h4>
-                <img class="imagen" src="./img/suicideSquad.jpg" alt="">
+                <img class="imagen" src="./img/suicideSquad.jpg" alt=" Foto de The Suicide Squad">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -157,7 +157,7 @@
                 <h4 class="duracion">
                     <a>Duración (2h 10m)</a>
                 </h4>
-                <img class="imagen" src="./img/spiderman.png" alt="">
+                <img class="imagen" src="./img/spiderman.png" alt=" Foto de Spiderman">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -189,7 +189,7 @@
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">Venom</h3>
                 <h4 class="duracion">Duración (2h 20m)</h4>
-                <img class="imagen" src="./img/venom.jpg" alt="">
+                <img class="imagen" src="./img/venom.jpg" alt="Foto de Venom">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -232,7 +232,7 @@
                     Duración (2h 29m)
                 </h4>
 
-                <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="">
+                <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="Foto de Vengadores">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -280,7 +280,7 @@
                 <h4 class="duracion">
                     Duración (1h 48m)
                 </h4>
-                <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="Foto de DeadPool">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -326,7 +326,7 @@
                 <h4 class="duracion">
                     Duración (2h 6m)
                 </h4>
-                <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="Foto de iron Man">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -369,7 +369,7 @@
                 <h4 class="duracion">
                     Duración (2h)
                 </h4>
-                <img class="imagen" src="./img/justiceLeague.png" alt="">
+                <img class="imagen" src="./img/justiceLeague.png" alt="Foto de Justice League">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -418,7 +418,7 @@
                 <h4 class="duracion">
                     Duración (2h 7m)
                 </h4>
-                <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt="Foto de Spider-Man">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
