--- a/favoritos.html
+++ b/favoritos.html
@@ -51,32 +51,32 @@
 
         <section class="primerasection">
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="Foto de Venom"> </a>
 
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Venom</a>
                 </h3>
             </article>
             <article class="imagenpp">
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg" alt="Foto de Avengers endgame"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers endgame</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt="Foto de The Suicide Squad"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt="Foto de Spiderman: Far From Home"> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series/loki.jpg" alt="">
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series/loki.jpg" alt="Foto de Loki">
                 </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Loki</a>
