Arreglo en detalles

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -110,7 +110,9 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">9.0/10⭐</p>
-                <h4 class="calificacion">Género:</h4>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
                 <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">17/7/2008</p>
@@ -143,7 +145,7 @@
                 <h4>
                     <a class="calificacion" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Ciencia Ficción</a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Ciencia Ficción</a></p>
 
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">5/8/2021</p>
@@ -179,7 +181,7 @@
                 <h4>
                     <a class="calificacion" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Acción</a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">2/6/2019</p>
             </article>
@@ -214,7 +216,7 @@
                 <h4>
                     <a class="calificacion" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Acción</a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -264,7 +266,7 @@
                 <h4>
                     <a class="calificacion" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Familia</a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Familia</a></p>
                 <h4 class="estreno">
                     Fecha de Estreno:
                 </h4>
@@ -310,7 +312,7 @@
                 <h4>
                     <a class="calificacion" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Acción</a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">
                     Fecha de Estreno:
                 </h4>
@@ -351,7 +353,7 @@
                 <h4>
                     <a class="calificacion" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a class="colorLetraGenero" href="./genres.html"> Acción</a></p>
+                <p class="puntuacion"><a class="colorLetraGenero" href="./detail-genres.html"> Acción</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -401,7 +403,7 @@
                 <h4>
                     <a class="calificacion" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Ciencia Ficción</a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Ciencia Ficción</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
@@ -446,7 +448,7 @@
                 <h4>
                     <a class="calificacion" href="./genres.html">Género:</a>
                 </h4>
-                <p class="puntuacion"><a href="./genres.html" class="colorLetraGenero"> Familia</a></p>
+                <p class="puntuacion"><a href="./detail-genres.html" class="colorLetraGenero"> Familia</a></p>
                 <h4 class="estreno">
                     <a>Fecha de Estreno:</a>
                 </h4>
