--- a/detail-series.html
+++ b/detail-series.html
@@ -69,8 +69,10 @@
 
                 <h4 class="calificacion">Calificación</h4>
                 <p class="puntuacion">7.6/10⭐</p>
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Ciencia Ficción</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./detail-genres.html"class="colorLetraGenero"> Ciencia Ficción</a></p>
 
                 <h4 class="estreno">Fecha de Estreno</h4>
                 <p class="estreno">12/10/2018</p>
@@ -101,7 +103,9 @@
                 <p class="puntuacion">8.6/10⭐</p>
                 <h4 class="calificacion">Género:</h4>
                 <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
-                <h4 class="estreno">Fecha de Estreno:</h4>
+                <h4>
+                    <a class="calificacion" href="./detail-genres.html">Género:</a>
+                </h4>
                 <p class="estreno">10/4/2015</p>
             </article>
         </section>
@@ -126,8 +130,10 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.2/10⭐</p>
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./detail-genres.html"class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">20/10/2019</p>
             </article>
@@ -136,7 +142,9 @@
         <section class="sectionpadre">
             <article class="serieprincipal">
                 <h3 class="titulosdetalles">Gotham</h3>
-                <h4 class="duracion">Temporadas: 5</h4>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
                 <img class="imagen" src="./img-series/gotham.jpg" alt="Foto de Gotham">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
@@ -154,8 +162,10 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">7.8/10⭐</p>
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Acción</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./detail-genres.html"class="colorLetraGenero"> Acción</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">22/9/2014</p>
             </article>
@@ -185,8 +195,10 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.4/10⭐</p>
-                <h4 class="calificacion">Género:</h4>
-                <p class="puntuacion"><a href="./genres.html"class="colorLetraGenero"> Familia</a></p>
+                <h4>
+                    <a class="calificacion" href="./genres.html">Género:</a>
+                </h4>
+                <p class="puntuacion"><a href="./detail-genres.html"class="colorLetraGenero"> Familia</a></p>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">9/6/2021</p>
             </article>
