--- a/detail-movie.html
+++ b/detail-movie.html
@@ -46,7 +46,7 @@
     
     <main>
         <div>
-            <H2 class="detalles">DETALLES DE PELICULAS</H2>
+            <h2 class="detalles">DETALLES DE PELICULAS</h2>
         </div>
 
         <section class="sectionpadre">
@@ -54,7 +54,7 @@
 
                 <h3 class="titulosdetalles">Avengers:EndGame</h3>
                 <h4 class="duracion">Duración (3h 2m)</h4>
-                <img class="imagen" src="./img/avengersEndgame.jpg" alt="Avengers:EndGame">
+                <img class="imagen" src="./img/avengersEndgame.jpg" alt=" Foto de Avengers:EndGame">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -90,7 +90,7 @@
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">Batman:The Dark Knight</h3>
                 <h4 class="duracion">Duración (2h 32m)</h4>
-                <img class="imagen" src="./img/batmanCabalero.png" alt="Batman:The Dark Knight">
+                <img class="imagen" src="./img/batmanCabalero.png" alt="Foto de Batman:The Dark Knight">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
