--- a/detail-series.html
+++ b/detail-series.html
@@ -44,7 +44,7 @@
     </header>
     <main>
         <div>
-            <H2 class="detalles">DETALLES DE SERIES</H2>
+            <h2 class="detalles">DETALLES DE SERIES</h2>
         </div>
         <section class="sectionpadre">
             <article class="serieprincipal">
