--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </ul>
     </header>
     <main>
-            <H2 class="tituloinicial">PELICULAS POPULARES:</H2>
+            <h2 class="tituloinicial">PELICULAS POPULARES:</h2>
         <section class="primerasection">
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg" alt=" Foto de Avengers:EndGame"> </a>
