arganizando archivos y carpetas

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -14,6 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap"
         rel="stylesheet">
+        
 </head>
 
 <body>
@@ -42,6 +43,8 @@
                 <a href="./favoritos.html" class="controleshijo">FAVORITOS</a>
             </li>
         </ul>
+        <script> src="/detail-movie.js"</script>
+        <a href=""></a>
     </header>
     
     <main>
