Creando nuevos archivos js

--- a/index.html
+++ b/index.html
@@ -128,35 +128,35 @@
             <article>
                 <a href=""> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="Foto de Avengers: IninityWar"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">Avengers: IninityWar</a>
+                    <a class="titulopelicula" href="./detail-movie.html" id=titulopelicula>Avengers: IninityWar</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 22/4/2019 </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="Foto de DeadPool"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">DeadPool</a>
+                    <a class="titulopelicula" href="./detail-movie.html" id=titulopelicula>DeadPool</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 11/2/2016 </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="Foto de Iron Man"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
+                    <a class="titulopelicula" href="./detail-movie.html" id=titulopelicula>Iron Man</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 30/04/2008 </p>
             </article>
             <article>
                 <a href=""> <img class="imagen" src="./img/justiceLeague.png" alt="Foto de Justice League"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">Justice League</a>
+                    <a class="titulopelicula" href="./detail-movie.html" id=titulopelicula>Justice League</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 16/11/2017 </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt="Foto de Spiderman 2"> </a>
                 <h3 class="tituoloprincipaldepelicula">
-                    <a class="titulopelicula" href="./detail-movie.html">Spiderman 2</a>
+                    <a class="titulopelicula" href="./detail-movie.html" id=titulopelicula >Spiderman 2</a>
                 </h3>
                 <p class="titulopelicula">Estreno: 1/07/2004 </p>
             </article>
